--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	<script type="text/javascript" src="app.js"></script>
 </head>
 <body>
-	<div id="buttons">
-		<input id="query" type='text' /><button id="search-button" disabled onclick="search()">Search</button></label>
-	</div>
+	<form id="buttons">
+		<input id="query" type='text' />
+		<button id="search-button" type="submit">Search</button>
+	</form>
 	<div id='search-container'>
 		<ul id="search-list">
 			
